ADD: some apis updated
